--- a/index.html
+++ b/index.html
@@ -643,6 +643,7 @@
 
       </main>
       <footer class="footer">
+        <div class="container">
         <section class="request" id="contact">
           <h2 class="request__title title">Book expedition</h2>
           <p class="request__text">Just fill down some information about you
@@ -654,7 +655,9 @@
             <button class="request__btn" type="submit">Book expedition</button>
           </form>
         </section>
+        </div>
         <div class="footer__wrapper">
+         
           <div class="footer__item footer__item-links">
             <p class="footer__item-ttitle">links</p>
             <a href="#about-title" id="about-footer" class="footer__item-link" aria-label="link">About Us</a>
@@ -684,7 +687,8 @@
                 </a>
             </div>
           </div>
-        </div>
+      
+      </div>
       </footer>
     </div>
 
